--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 certifi==2023.5.7
 charset-normalizer==3.1.0
+decorator==5.1.1
 idna==3.4
 numpy==1.24.3
 pandas==2.0.1
@@ -10,3 +11,4 @@ requests==2.31.0
 six==1.16.0
 tzdata==2023.3
 urllib3==2.0.2
+validators==0.20.0
